OAuth/src/objects/OAuth2_Token__c.object
<CustomObject>
    <fields>
        <fullName>OAuth2_Service__c</fullName>
        <label>OAuth2 Service</label>
        <referenceTo>OAuth2Service__c</referenceTo>
        <relationshipLabel>Tokens</relationshipLabel>
        <relationshipName>Tokens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OAuth2_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth2 Token</label>
    <nameField>
        <label>OAuth2 Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth2 Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>